--- a/manga.html
+++ b/manga.html
@@ -12,7 +12,7 @@
     <h1>Manga</h1>
     <p>Here are some websites i have used to read manga in japanese online as well as download it and read it offline. If you want to read manga in a mobile device i highly recommend checking out:</p>
     <h3>Tachiyomi</h3>
-    <p>Its an android app that allows you to read manga from different sources, you can download the manga and read it offline, i recommend using the local source option. Theres a guide on Tachiyomi's website on how to set up different types of files but basically you are gonna need to hava a folder named Tachiyomi and in it another one called local, here you can store folders with the chapters/volumes of the manga you downloaded from nyaa.si or mangazip and keep track of your progress.</p>
+    <p>Its an android app that allows you to read manga from different sources, you can download the manga and read it offline, i recommend using the local source option.</p><p> Theres a guide on Tachiyomi's website on how to set up different types of files but basically you are gonna need to have a folder named Tachiyomi and in it another one called local, here you can store folders with the chapters/volumes of the manga you downloaded from nyaa.si or mangazip and keep track of your progress.</p>
     <h3>Downloading Manga</h3>
     <p>When it comes to downloading manga Nyaa.si is the best website i have found, it has a huge selection of not only manga but also anime and books. You can download the manga and read it offline with a manga reader like Tachiyomi or OpenComic. To download the contents you are gonna need a torrent client like qBittorrent, otherwise you can use another source like mangazip that lets you download manga through downloaders like sakurafile or rapidgator</p>
     <h3>Online readers</h3>
